# artificial-centuria

./: .env.example  .gitignore  .railwayignore  Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
data/synthetic/dale_hutchins/: cv.txt  identity.json  recent_reads.txt  subscriptions.txt
data/synthetic/dalston_clt/: context_cache.json  neighbourhood.json  personas.json  personas_enriched.json  personas_for_survey.json
data/synthetic/dalston_clt/personas/hh_001_p1/: facebook_about.txt  identity.json  netflix_history.txt  notes.txt  text_messages.txt
data/synthetic/dalston_clt/personas/hh_001_p2/: amazon_wishlist.txt  bookmarks.txt  grocery_list.txt  identity.json  shopping_history.txt
notebooks/: 01_notes.md  01_single_agent_from_personal_data.ipynb  02_synthetic_persona_generation.ipynb  03_building_a_fictional_neighbourhood.ipynb
src/centuria/: __init__.py  config.py  utils.py
src/centuria/api/: __init__.py  server.py
src/centuria/data/: __init__.py  extractors.py  loaders.py
src/centuria/llm/: __init__.py  client.py
src/centuria/models/: __init__.py  persona.py  response.py  survey.py
src/centuria/observability/: __init__.py
src/centuria/persona/: __init__.py  file_types.py  generator.py  synthetic.py
src/centuria/survey/: __init__.py  executor.py
tests/: __init__.py  test_config.py  test_utils.py
web/: package-lock.json  package.json
web/src/: app.css  app.html
web/src/routes/: +page.svelte
web/static/sample-data/: 01-random-personas.json  02-testing-space-results.json
(+763 files in other folders)
